--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="#Features" class="menu__link">Features</a>
             </li>
             <li class="menu__item">
-              <a href="#Sign Up" class="menu__link">Sign Up</a>
+              <a href="#Sign" class="menu__link">Sign Up</a>
             </li>
           </ul>
         </nav>
